--- a/src/styles/global/vars.scss
+++ b/src/styles/global/vars.scss
@@ -4,9 +4,20 @@ $ff-main-bold:"helvetica-neue-bold";
 $ff-main-light:"helvetica-neue-light";
 $ff-steps:"georgia-bold";
 
-//ColorsHeader
+//Colors
 $headerTopBGColor:#f0f2f4;
 $headerTopBGColorBorder:#e2e2e2;
 $headerColorContact:#424242;
 $headerBottomColorLinkActive:#de2b24;
+$aboutDescription:#5c5c5c;
+$approchBGColor:#f3f3f3;
+
+
+//Media query screen
+$laptop:1080px;
+$tablet:768px;
+$mobil__l:425px;
+$mobil__m:390px;
+$mobil__s:320px;
+
 
