--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 html(lang="en")
   head
     meta(charset="UTF-8")
@@ -8,3 +9,9 @@ html(lang="en")
   body
     include sections/header
     include sections/hero
+    include sections/AboutUs
+    include sections/OurApproch
+    include sections/ourwork
+    include sections/form
+    include sections/footer
+    script(src='js/main.min.js')
