--- a/src/template/sections/contacts.pug
+++ b/src/template/sections/contacts.pug
@@ -1,7 +1,7 @@
 .contacts
-    a.contact(href="tel:+380505050505")
+    a.contact(href="tel:63373128")
         i.fa.fa-mobile.contactIcon(aria-hidden="true")
-        span.contactText 0505050505
+        span.contactText 6337 3128
     a.contact(href="mailto:info@business.com")
         i.fa.fa-envelope.contactIcon.contactIconEmail(aria-hidden="true")
         span.contactText info@business.com
