--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -9,7 +9,34 @@
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    padding: 40px 0;
+    padding: 40px 0 32px;
+
+    .button{
+      @media (max-width: $laptop) {
+        margin-right: 15px;
+      }
+
+      @media (max-width: 870px) {
+        margin-right: 0;
+        margin-top: 15px;
+      }
+    }
+
+    .logo{
+      @media (max-width: $laptop) {
+        margin-left: 15px;
+      }
+
+      @media (max-width: 870px) {
+        margin-bottom:10px ;
+        margin-left: 0;
+      }
+    }
+    
+    @media (max-width: 870px) {
+      flex-direction: column;
+
+    }
   }
 }
 
@@ -55,5 +82,9 @@
   border-radius: 3px;
   background-color: #1287bf;
   color: #fff;
+
+  @media (max-width:$laptop) {
+    margin-right: 20px;
+  }
 }
 
