--- a/src/styles/sections/hero.scss
+++ b/src/styles/sections/hero.scss
@@ -1,14 +1,28 @@
 .hero{
-  min-height: 60px;
+  min-height: 590px;
   padding: 150px 0;
   text-align: center;
   color:#fff;
-  background: #ccc url("../images/hero-bg.jpg") center/cover no-repeat;
+  background: #ccc url("../images/hero-bg.jpg")  center/cover no-repeat;
+
+  @media (max-width:$tablet) {
+    padding: 85px 20px;
+    min-height: inherit;
+  }
+
+  @media (max-width:$mobil__l) {
+    padding: 60px 15px;
+    min-height: inherit;
+  }
 
   &About{
     font-family: $ff-main-bold;
     font-size: 3rem;
     line-height: 1;
+
+    @media (max-width: $mobil__m) {
+      font-size: 2.5rem;
+    }
   }
 
   &Title{
@@ -23,5 +37,9 @@
     font-size: 1.5rem;
     font-weight: bold;
     letter-spacing: 1px;
+
+    @media (max-width: $mobil__m) {
+      font-size: 1.2rem;
+    }
   }
 }
