--- a/src/styles/sections/nav.scss
+++ b/src/styles/sections/nav.scss
@@ -2,7 +2,11 @@
   display: inline-block;
   vertical-align: top;
   padding-top: 7px;
-  //margin-right: 15px;
+
+  @media (max-width: $mobil__m) {
+    text-align: center;
+  }
+
 
   &Link{
     display: inline-block;
@@ -27,6 +31,11 @@
       margin-bottom: 1px;
       border-radius: 50%;
       background-color: $headerColorContact;
+
+      @media (max-width: $mobil__m) {
+        height: 3px;
+        width: 3px;
+      }
     }
 
     &:last-child:after{
