--- a/src/template/sections/nav.pug
+++ b/src/template/sections/nav.pug
@@ -1,5 +1,5 @@
 nav.nav
-    -var items =['Home','About us','Our Approach','Our Work']
+    -var items =['Home','About us','Our Approch','Our Work']
     each item in items
         if item === 'Home'
             a.navLink.navLinkActive(href='#')=item
